[Hillhead] Fixed btn-info hover in dark mode

--- a/theme/hillhead/scss/hillhead.scss
+++ b/theme/hillhead/scss/hillhead.scss
@@ -1778,7 +1778,7 @@ body.hillhead-night .btn-info {
     color: #76CABD !important;
 }
 
-body.hillhead-night nav.navbar .btn-info:hover {
+body.hillhead-night .btn-info:hover {
     background-color: #09453B !important;
 }
 
@@ -1788,7 +1788,7 @@ body.hillhead-night nav.navbar .input-group-btn .btn-secondary {
     color: #c4d6ee !important;
 }
 
-body.hillhead-night .input-group-btn .btn-secondary:hover {
+body.hillhead-night  nav.navbar .input-group-btn .btn-secondary:hover {
     background-color: #121E30 !important;
 }
 
